fix: Refactor article template

--- a/starter-kits/tailwind/source/default/patterns/04-templates/article/article.twig
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/article/article.twig
@@ -14,9 +14,9 @@
 {% endset %}
 {{
   pattern('container', {
-    width: 'width',
+    width: 'small',
     padding_bottom: 'small',
-    content: pattern('rich_text', {text: lead_text}, 'default')
+    content: pattern('rich_text', {text: lead_text})
   })
 }}
 {% if image is not empty %}
@@ -28,6 +28,6 @@
   pattern('container',{
     width: 'small',
     padding_bottom: 'small',
-    content: pattern('rich_text', {text: text}, 'default')
+    content: pattern('rich_text', {text: text})
   })
 }}
