fix(WS): Genreal components fix.

--- a/starter-kits/tailwind/apps/drupal/templates/layout/html.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/layout/html.html.twig
@@ -32,7 +32,7 @@
     <js-placeholder token="{{ placeholder_token|raw }}">
 
   </head>
-  <body{{ attributes.addClass('flex flex-col overflow-x-hidden bg-gray-50') }}
+  <body{{ attributes.addClass('flex flex-col overflow-x-hidden bg-gray-50 font-copy') }}
     x-data="{ menuIsOpen: false, languageSwitcherOpen: false }"
   >
     {#
