--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
@@ -26,7 +26,7 @@
   .addClass([
     pattern_configuration('button', variant, 'defaults')['wrapper_classes'],
     pattern_configuration('button', variant, 'wrapper_classes')[active_key],
-    pattern_configuration('button', variant, 'size')[size]['padding'],
+    variant == 'link' ? 'px-0' : pattern_configuration('button', variant, 'size')[size]['padding'],
     pattern_configuration('button', variant, 'size')[size]['text'],
     pattern_configuration('button', variant, 'size')[size]['icon_gap'],
     pattern_configuration('button', variant, 'icon_alignment')[icon_alignment],
@@ -44,7 +44,7 @@
   {% if variant != 'icon' %}
     {{ text }}
   {% endif %}
-  {% if icon is not empty %}
+  {% if icon|render is not empty %}
     {{ pattern('icon', {icon: icon, scale: icon_scale }, 'spritemap' ) }}
   {% endif %}
 </{{ tag_name }}>
