--- a/starter-kits/tailwind/source/default/patterns/02-molecules/button-group/button-group.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/button-group/button-group.twig
@@ -17,7 +17,7 @@
   Attributes
 #}
 {% set attributes = attributes.addClass([
-    pattern_configuration('button_group', null, 'default')['classes'],
+    pattern_configuration('button_group', null, 'classes'),
     pattern_configuration('button_group', null, 'align')[align]['direction']
   ])
 %}
