--- a/presets/placeholder/patterns/_placeholder-macro.twig
+++ b/presets/placeholder/patterns/_placeholder-macro.twig
@@ -16,7 +16,6 @@
  */
 #}
 {% macro get_placeholder_url(image_style, placeholder_url) %}
-
   {% if not image_style.height %}
     {% set height = random(range(image_style.width * 0.75, image_style.width * 1.25, 10)) %}
   {% endif %}
@@ -39,7 +38,7 @@
  *   The image.
  */
 #}
-{% macro image(style, service) %}
+{% macro image(style, service, src) %}
 
   {% set image_config = pattern_configuration('placeholder', 'image', 'image_config') %}
   {% set placeholder_url = pattern_configuration('placeholder', 'image', 'service')[service] %}
@@ -53,9 +52,10 @@
     {% set image_style = responsive_image_styles[style] %}
     {% set is_responsive_image = image_style != null ? true : false %}
   {% endif %}
-
   {# Build responsive image or image. #}
-  {% if image_style is empty %}
+  {%  if src is not empty %}
+    <img src="{{- src -}}" alt="A placeholder image">
+  {% elseif image_style is empty %}
     No image style {{ style }} found!
   {% else %}
     {% if is_responsive_image == false %}
