--- a/presets/placeholder/patterns/placeholder.twig
+++ b/presets/placeholder/patterns/placeholder.twig
@@ -9,13 +9,16 @@
  * Use variant image or background.
  */
 #}
-{# SETTINGS #}
+{#
+  Defaults
+#}
+{% set variant = variant|default('image') %}
+
 {% import '@ws-placeholder/_placeholder-macro.twig' as placeholder %}
 
-{% set variant = variant|default('image') %}
-{# VARIANT TEMPLATES #}
+{# Template #}
 {% if variant == 'image' %}
-  {{ placeholder.image(style, service) }}
+  {{ placeholder.image(style, service, src) }}
 {% elseif variant == 'background' %}
   {{ placeholder.background(style, background_classes, service) }}
 {% endif %}
