--- a/starter-kits/tailwind/source/default/patterns/00-forms/label/form-label.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/label/form-label.twig
@@ -13,7 +13,9 @@
  */
 #}
 
-{# FORM-LABEL CLASSES #}
+{#
+  @Defaults
+#}
 {%
   set classes = [
     title_display == 'after' ? 'option',
@@ -24,7 +26,9 @@
   ]
 %}
 
-{# TEMPLATE #}
+{#
+  @Template
+#}
 {% if title is not empty or required -%}
   <span{{ attributes.addClass(classes) }}>{{ title }}</span>
 {%- endif %}
