--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/select.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/select.twig
@@ -11,14 +11,10 @@
  */
 #}
 
-{#
-  Defaults
-#}
+{# Defaults #}
 {% set attributes = attributes|default(create_attribute()) %}
 
-{#
-Classes
-#}
+{# Classes #}
 {% set classes = ([
   'form-select',
   pattern_configuration('form_select', variant, 'classes')['wrapper']
