--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/select.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/select.twig
@@ -11,16 +11,19 @@
  */
 #}
 
-{# Defaults #}
+{#
+Defaults
+#}
 {% set attributes = attributes|default(create_attribute()) %}
-
-{# Classes #}
-{% set classes = ([
-  'form-select',
+{#
+Attributes
+#}
+{% set attributes = attributes.addClass([
   pattern_configuration('form_select', variant, 'classes')['wrapper']
-] | sort | join(' ') | trim )%}
+]) %}
+{# Classes #}
 
-<select{{ attributes.addClass(classes) }}>
+<select{{ attributes }}>
   {% for option in options %}
     {% if option.type == 'optgroup' %}
       <optgroup label="{{ option.label }}">
