--- a/starter-kits/tailwind/source/default/patterns/00-forms/label/form-label.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/label/form-label.twig
@@ -17,18 +17,18 @@
   @Defaults
 #}
 {%
-  set classes = [
+  set classes = ([
     title_display == 'after' ? 'option',
     title_display == 'invisible' ? 'visually-hidden',
     required ? 'js-form-required',
     required ? 'form-required',
     'pr-4',
-  ]
+  ]| sort| join(' ')| trim)
 %}
 
 {#
   @Template
 #}
 {% if title is not empty or required -%}
-  <span{{ attributes.addClass(classes) }}>{{ title }}</span>
+  <span class="{{ classes }}">{{ title }}</span>
 {%- endif %}
