--- a/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.twig
@@ -44,71 +44,69 @@
  */
 #}
 
-{#
- /**
- * @defaults
- **/
-#}
-{%
-  set classes = [
-    'js-form-item',
-    'form-item',
-    flex,
-    pattern_configuration('form_element', variant, 'classes')['wrapper']
-  ]
-%}
+{# Defaults #}
+{% set attributes = attributes|default(create_attribute()) %}
+{# Attributes #}
+{% set attributes = attributes.addClass([
+  pattern_configuration('form_element', variant, 'classes')['wrapper'],
+  pattern_configuration('form_element', variant, 'spacings')['margin'],
+  flex
+])%}
 
-{%
-  set error_classes = [
-    pattern_configuration('form_element', variant, 'classes')['error']
-  ]
-%}
-{% set error_attributes = create_attribute() %}
-{%
-  set description_classes = [
-    'form-item__description',
-    description_display == 'invisible' ? 'visually-hidden',
-    pattern_configuration('form_element', variant, 'classes')['description']
-  ]
-%}
+{% set error_attributes = create_attribute().addClass ([
+  pattern_configuration('form_element', variant, 'classes')['error']
+])%}
+{% set description_attributes = create_attribute().addClass ([
+  pattern_configuration('form_element', variant, 'classes')['description'],
+  description_display == 'invisible' ? 'visually-hidden',
+])%}
+{#
+Internal logic
+#}
 {%
   set description = description is empty ? {'content': description_text} : description
 %}
-{% set attributes = attributes|default(create_attribute()) %}
 {#
- /*
- * @template
- */
+Template
 #}
-<label{{ attributes.addClass(classes) }}>
+<label{{ attributes }}>
   <div>
+
   {% if label_display in ['before', 'invisible'] %}
     <div>{{ label }}</div>
   {% endif %}
+
   {% if prefix is not empty %}
     <span class="field-prefix">{{ prefix }}</span>
   {% endif %}
+
   {% if description_display == 'before' and description.content %}
-    <div{{ description.attributes.addClass(description_classes) }}>
+    <div{{ description_attributes }}>
       {{ description.content }}
     </div>
   {% endif %}
+
   {{ children }}
+
   {% if suffix is not empty %}
     <span class="field-suffix">{{ suffix }}</span>
   {% endif %}
+
   {% if label_display == 'after' %}
     {{ label }}
   {% endif %}
+
   {% if errors %}
-    <div {{ error_attributes.addClass(error_classes) }}>
+    <div {{ error_attributes }}>
       {{ errors }}
     </div>
   {% endif %}
+
   {% if description_display in ['after', 'invisible'] and description.content %}
-    <div{{ description.attributes.addClass(description_classes) }}>
+    <div{{ description_attributes }}>
       {{ description.content }}
     </div>
   {% endif %}
+
   </div>
 </label>
