--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/radio.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/radio.twig
@@ -15,19 +15,13 @@
   Defaults
 #}
 {% set attributes = attributes|default(create_attribute()) %}
-
 {#
-  Classes
+Attributes
 #}
-{% set classes = ([
-  'form-radio',
-  'bg-form-radio-icon-unchecked checked:bg-form-radio-icon-checked',
-  'dark:bg-dark-form-radio-icon-unchecked dark:checked:bg-dark-form-radio-icon-checked',
-  'bg-no-repeat bg-center border-0 w-5 h-5',
-  pattern_configuration('form_radio', variant, 'classes')['wrapper']
-] | sort | join(' ') | trim )%}
-
+{% set attributes = attributes.addClass([
+  pattern_configuration('form_radio', variant, 'classes')['wrapper'],
+]) %}
 {#
   Template
 #}
-<input {{ attributes.addClass(classes) }} />{{ children }}
+<input {{ attributes }} />{{ children }}
