--- a/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.twig
@@ -40,25 +40,41 @@
  *     but available to screen readers.
  * - disabled: True if the element is disabled.
  * - title_display: Title display setting.
- *
+ * - floating label: displays afloating label for textfields, refer to form-label.css
  */
 #}
 
 {# Defaults #}
 {% set attributes = attributes|default(create_attribute()) %}
+{% set floating_label = floating_label|default('false') %}
 {# Attributes #}
 {% set attributes = attributes.addClass([
   pattern_configuration('form_element', variant, 'classes')['wrapper'],
   pattern_configuration('form_element', variant, 'spacings')['margin'],
   flex
 ])%}
-
 {% set error_attributes = create_attribute().addClass ([
   pattern_configuration('form_element', variant, 'classes')['error']
 ])%}
 {% set description_attributes = create_attribute().addClass ([
   pattern_configuration('form_element', variant, 'classes')['description'],
   description_display == 'invisible' ? 'visually-hidden',
+])%}
+{# attributes for floating label #}
+{% set floating_attributes = create_attribute().addClass ([
+  pattern_configuration('form_element', variant, 'floating_label')['wrapper']
+])%}
+{% set floating_label__wrapper_attributes = create_attribute().addClass ([
+  pattern_configuration('form_element', variant, 'floating_label')['floating']
+])%}
+{% set floating_label__left_attributes = create_attribute().addClass ([
+  pattern_configuration('form_element', variant, 'floating_label')['left']
+])%}
+{% set floating_label__center_attributes = create_attribute().addClass ([
+  pattern_configuration('form_element', variant, 'floating_label')['center']
+])%}
+{% set floating_label__right_attributes = create_attribute().addClass ([
+  pattern_configuration('form_element', variant, 'floating_label')['right']
 ])%}
 {#
 Internal logic
@@ -71,11 +87,22 @@ Template
 #}
 <label{{ attributes }}>
   <div>
-
   {% if label_display in ['before', 'invisible'] %}
-    <div>{{ label }}</div>
+    {% if floating_label == 'true' %}
+    <div  {{ floating_attributes }}>
+        {{ children }}
+      <div {{ floating_label__wrapper_attributes }}>
+        <div {{ floating_label__left_attributes }}></div>
+        <div {{ floating_label__center_attributes }}>
+          {{ label }}
+        </div>
+        <div {{ floating_label__right_attributes }}></div>
+      </div>
+    </div>
+    {% else %}
+      <div>{{ label }}</div>
+    {%- endif %}
   {% endif %}
-
   {% if prefix is not empty %}
     <span class="field-prefix">{{ prefix }}</span>
   {% endif %}
@@ -85,10 +112,10 @@ Template
       {{ description.content }}
     </div>
   {% endif %}
-
-  {{ children }}
-
-  {% if suffix is not empty %}
+  {% if floating_label == 'false'%}
+    {{ children }}
+  {% endif %}
+    {% if suffix is not empty %}
     <span class="field-suffix">{{ suffix }}</span>
   {% endif %}
 
