fix(#44): Cookie banner integrieren.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
@@ -31,6 +31,7 @@
     pattern_configuration('button', variant, 'size')[size]['icon_gap'],
     pattern_configuration('button', variant, 'icon_alignment')[icon_alignment],
     expanded ? 'w-full justify-between' : 'justify-center',
+    extra_classes
   ])
   .setAttribute('traget', target)
   .setAttribute('title', title)
